# a-cal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX-UNDERSTANDING.md  CONTRIBUTING.md  Dockerfile.backend  HANDOFF-FOR-CLAUDE-CODE.md  HANDOFF-REFACTOR.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
a_cal/: __init__.py  models.py
alembic/: env.py  script.py.mako
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  FEATURE_AUDIT.md
plugins/: README.md
scripts/: migrate-and-start.sh
sdk/: README.md  index.ts  package.json
tests/: _authclient.py  conftest.py  test_agent_routes.py  test_agents.py  test_analytics_api.py  test_api_explorer.py  test_atom_bridge.py  test_auth.py  test_auth_wall.py  test_autonomy.py  test_autonomy_api.py  test_booking_api.py  test_calcom_bridge.py  test_caldav_integration.py  test_calendar_analytics.py  test_cas_integration.py  test_connect_and_self_model.py  test_demo_auth.py  test_developer.py  test_developer_api.py  test_email_depth.py  test_email_endpoints.py  test_email_scheduler.py  test_event_actions.py  test_example_plugins.py  test_http_isolation.py  test_hybrid_mode.py  test_imap_smtp_provider.py  test_llm_service.py  test_marketplace.py  test_marketplace_api.py  test_marketplace_registry.py  test_marketplace_trust.py  test_migrations.py  test_oauth.py  test_persistent_marketplace.py  test_phase3_phase4.py  test_phase5_phase6.py  test_plugin_integration.py  test_plugin_runtime.py  (+15 more)
web/: .dockerignore  Dockerfile  next.config.mjs  package.json  (+3 more)
(+166 files in other folders)
