[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a-cal"
version = "0.7.0"
description = "A-Cal — agentic calendar platform with unified identity, sub-accounts, agent swarm, and total customization"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2",
    "sqlalchemy>=2",
    "httpx>=0.27",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
caldav = ["caldav>=1.3", "icalendar>=5"]
atom = [
    "cryptography>=42",
    "aiosqlite>=0.20",
    "tiktoken>=0.7",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "radicale>=3"]
postgres = ["psycopg2-binary>=2.9"]
migrations = ["alembic>=1.13"]

[tool.setuptools.packages.find]
include = ["a_cal*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
